--- a/prometheus.yml
+++ b/prometheus.yml
@@ -11,3 +11,8 @@ scrape_configs:
   - job_name: 'managed_node'
     static_configs:
      - targets: ['192.168.42.1:9100']
+
+  - job_name: 'cat_metrics'
+    metrics_path: '/actuator/prometheus'
+    static_configs:
+     - targets: ['cat-metrics:8080']
