add submodule for ansible node exporter role

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "cat-metrics"]
 	path = cat-metrics
 	url = https://github.com/jockey10/cat-metrics.git
+[submodule "roles/cloudalchemy.node-exporter"]
+	path = roles/cloudalchemy.node-exporter
+	url = https://github.com/cloudalchemy/ansible-node-exporter.git
